[gd_scene load_steps=7 format=3 uid="uid://c0mainscene"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://c0player" path="res://scenes/player.tscn" id="2_player"]
[ext_resource type="Script" path="res://scripts/platform_manager.gd" id="3_platmgr"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="4_hud"]
[ext_resource type="Script" path="res://scripts/start_screen.gd" id="5_start"]
[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="6_gameover"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 854.0
color = Color(0.85, 0.92, 0.95, 1)

[node name="PlatformManager" type="Node2D" parent="."]
script = ExtResource("3_platmgr")

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(240, 600)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(240, 771)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HUDContainer" type="VBoxContainer" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
script = ExtResource("4_hud")

[node name="ScoreLabel" type="Label" parent="HUD/HUDContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Score: 0"
horizontal_alignment = 1

[node name="StartScreen" type="VBoxContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("5_start")

[node name="TitleLabel" type="Label" parent="HUD/StartScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Doodle Jump"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="HUD/StartScreen"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="TapLabel" type="Label" parent="HUD/StartScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
text = "Tap anywhere to start"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="HUD/StartScreen"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="HighScoreLabel" type="Label" parent="HUD/StartScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "Best: 0"
horizontal_alignment = 1

[node name="GameOverScreen" type="VBoxContainer" parent="HUD"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("6_gameover")

[node name="GameOverLabel" type="Label" parent="HUD/GameOverScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
theme_override_colors/font_color = Color(0.8, 0.15, 0.15, 1)
text = "Game Over"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="HUD/GameOverScreen"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="FinalScoreLabel" type="Label" parent="HUD/GameOverScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Score: 0"
horizontal_alignment = 1

[node name="BestScoreLabel" type="Label" parent="HUD/GameOverScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "Best: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="HUD/GameOverScreen"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="RestartButton" type="Button" parent="HUD/GameOverScreen"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Play Again"
